[#18] - Change reporting page's app name

--- a/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/dhis-web-apps/index.html
+++ b/dhis-2/dhis-web/dhis-web-apps/src/main/webapp/dhis-web-apps/index.html
@@ -12,6 +12,7 @@
         <li><a href="../dhis-web-tracker-capture/index.html">dhis-web-tracker-capture</a></li>
         <li><a href="../dhis-web-cache-cleaner/index.html">dhis-web-cache-cleaner</a></li>
         <li><a href="../dhis-web-commons-security/logout.action">log out</a></li>
+        <li><a href="../reporting-page/index.html">reporting-page</a></li>
     </ul>
 </body>
 </html>
